@@ -1,3 +1,4 @@
+	* added session::listen_no_system_port flag to prevent libtorrent from ever binding the listen socket to port 0
 	* added option to not recheck on missing or incomplete resume data
 	* extended stats logging with statistics=on builds
 	* added new session functions to more efficiently query torrent status
